--- a/website/index.html
+++ b/website/index.html
@@ -9,20 +9,23 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous"> </head>
     <style>
         #mainNav{
-            background: black;
+           
         }
     </style>
 <body>
     <!-- content -->
-    <nav id="mainNav" class="navbar navebar-full navbar-black bg-faded navbar-fixed-top">
-        
+    <nav id="mainNav" class="navbar navebar-full navbar-light bg-faded navbar-fixed-top">
+        <button class="navbar-toggler float-xs-right hidden-sm-up " type="button" data-toggle="collapse" data-target="#minimenu">
+
+        </button>
+        <div id="minimenu" class="collapse navbar-toggleable-xs">
         <ul class="nav navbar-nav">
             <li class="nav-item"><a href="#about" class="nav-link">about</a></li>
             <li class="nav-item"><a href="#product" class="nav-link">product</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link">contact</a></li>
 
         </ul>
-
+    </div>
     </nav>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.3.7/js/tether.min.js" integrity="sha384-XTs3FgkjiBgo8qjEjBk0tGmf3wPrWtA6coPfQDfFEY8AnYJwjalXCiosYRBIBZX8" crossorigin="anonymous"></script>
