--- a/website/index.html
+++ b/website/index.html
@@ -30,7 +30,7 @@
 
         </button>
         <div id="minimenu" class="collapse navbar-toggleable-xs">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav text-capitalize">
             <li class="nav-item"><a href="#about" class="nav-link">about</a></li>
             <li class="nav-item"><a href="#product" class="nav-link">product</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link">contact</a></li>
@@ -52,15 +52,15 @@
 <section id="about">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-xs-center">
                 <h3>One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptatibus ducimus vitae quam incidunt debitis excepturi in? Unde autem amet tempora itaque, quas doloremque dolores alias, eaque quidem quam beatae.</p>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-xs-center">
                 <h3>One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptatibus ducimus vitae quam incidunt debitis excepturi in? Unde autem amet tempora itaque, quas doloremque dolores alias, eaque quidem quam beatae.</p>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-xs-center">
                 <h3>One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptatibus ducimus vitae quam incidunt debitis excepturi in? Unde autem amet tempora itaque, quas doloremque dolores alias, eaque quidem quam beatae.</p>
             </div>
@@ -73,7 +73,7 @@
 <section id="product">
     <div class="container">
         <div class="row">
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-xs-center">
                 <div class="card">
                     <div class="card-block">
                         <h3 class="card-title">Product1 </h3>
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </div>
-            <div class="col-md-4 text-center">
+            <div class="col-md-4 text-xs-center">
                 <h3>One</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptatibus ducimus vitae quam incidunt debitis excepturi in? Unde autem amet tempora itaque, quas doloremque dolores alias, eaque quidem quam beatae.</p>
             </div>
