--- a/website/index.html
+++ b/website/index.html
@@ -8,18 +8,26 @@
     <title>Bootstrap Website</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous"> </head>
 <style>
+    body,html{
+        height: 100%;
+        width: 100%;
+    }
     #mainNav {
         background-color: black;
     }
-    
-    header .htop {
+    .htop div{
+        background-color: rgb(0,0,0) transparent;
+        background-color: rgba(0,0,0,.6);
+        padding: ;
+    }
+  .htop {
         position: relative;
         margin-top: 50px;
         width: 100%;
         text-align: center;
         min-height: auto;
         /*background-image: url(http://lorempixel.com/1600/700/sports);*/
-        background-image: url(http://placehold.it/1600x700);
+        background-image: url(http://lorempixel.com/1600/700/sports);
         background-size: cover;
         color: white;
         font-size: 1em;
@@ -29,6 +37,11 @@
         height: 200px;
         padding: 20px;
         margin-top: 40px;
+    }
+    @media (min-width: 768px){
+        .htop{
+            min-width: 100%;
+        }
     }
 </style>
 
@@ -44,8 +57,8 @@
             </ul>
         </div>
     </nav>
-    <header>
-        <div class='htop'>
+    <header class='htop'>
+        <div >
             <h1>Your Company</h1>
             <hr>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis p</p>
